feat: implement create github issue
